Finish meteor course

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,26 @@
 </head>
 
 <body>
-  <h1>Task List</h1>
-  {{> lista}}
+  <header class="container">
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand">
+          Taskie
+        </a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          {{> loginButtons}}
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="container">
+    {{#if currentUser}}
+      {{> novo}}
+      {{> lista}}
+    {{else}}
+      <p>Você deve se logar primeiro</p>
+    {{/if}}
+  </main>
 </body>
